--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -37,32 +37,33 @@ div.mb-5
       span.no-answers
         'No answers
 
-div
-  = form_with model: [@question, @answer], html: { id: "new-answer-form" }, local: false, class: 'create-answer-form' do |f|
-    div.answer-errors
-      = render 'shared/errors', resource: @answer
+- if can?(:create, Answer)
+  div
+    = form_with model: [@question, @answer], html: { id: "new-answer-form" }, local: false, class: 'create-answer-form' do |f|
+      div.answer-errors
+        = render 'shared/errors', resource: @answer
 
-    div.answer-new.mb-3
-      = f.label :body, 'You can answer the question here', class: 'form-label'
-      = f.text_area :body, id: :answer_body, rows: 10, class: 'form-control create-answer-area'
+      div.answer-new.mb-3
+        = f.label :body, 'You can answer the question here', class: 'form-label'
+        = f.text_area :body, id: :answer_body, rows: 10, class: 'form-control create-answer-area'
 
-    div.mb-3
-      label for="answer_files"
-        = content_tag "a", "+ Add files", class: "btn btn-primary text-light", role: 'button'
+      div.mb-3
+        label for="answer_files"
+          = content_tag "a", "+ Add files", class: "btn btn-primary text-light", role: 'button'
 
-      = f.file_field :files, id: "answer_files", class: 'form-control form-control-sm answer_files d-none', multiple: true, direct_upload: true
+        = f.file_field :files, id: "answer_files", class: 'form-control form-control-sm answer_files d-none', multiple: true, direct_upload: true
 
-      p id="files-area"
-          span id="filesList"
-            span id="files-names"
+        p id="files-area"
+            span id="filesList"
+              span id="files-names"
 
-    div.mb-2
-      div.mb-1 Links
-      #links.mb-5
-        = f.fields_for :links do |link|
-          = render 'link_fields', f: link
-        .links
-          = link_to_add_association '+ Add link', f, :links, class: 'btn btn-primary'
+      div.mb-2
+        div.mb-1 Links
+        #links.mb-5
+          = f.fields_for :links do |link|
+            = render 'link_fields', f: link
+          .links
+            = link_to_add_association '+ Add link', f, :links, class: 'btn btn-primary'
 
-    = f.submit 'Answer', class: 'btn btn-primary me-2'
-    = link_to 'Back to questions', questions_path, class: 'btn btn-outline-secondary'
+      = f.submit 'Answer', class: 'btn btn-primary me-2'
+      = link_to 'Back to questions', questions_path, class: 'btn btn-outline-secondary'
