--- a/app/views/answers/show.html.slim
+++ b/app/views/answers/show.html.slim
@@ -1,7 +1,7 @@
-h1 Answer to the question "#{@question.title}"
+h1 Answer to the question "#{@answer.question.title}"
 
 div.mb-5
   div.fw-bold Answer body
   = @answer.body
 
-= link_to 'Назад к вопросу', question_path(@question), class: 'btn btn-primary'
+= link_to 'Назад к вопросу', question_path(@answer.question), class: 'btn btn-primary'
