Add feature test for "change_question" subscribe, fix typos

--- a/app/views/notification_mailer/notify_about_change_question.html.slim
+++ b/app/views/notification_mailer/notify_about_change_question.html.slim
@@ -1,7 +1,7 @@
 - if @user.author_of?(@question)
   h1 Your question has been changed.
 - else
-  h1 Question question has been changed.
+  h1 Question has been changed.
 
 h2 Changed question:
 p
