--- a/app/views/notification_mailer/notify_about_change_question.text.slim
+++ b/app/views/notification_mailer/notify_about_change_question.text.slim
@@ -1,7 +1,7 @@
 - if @user.author_of?(@question)
   'Your question has been changed.
 - else
-  'Question question has been changed.
+  'Question has been changed.
 
 'Changed question:
 = @question.title
