--- a/app/views/search/index.html.slim
+++ b/app/views/search/index.html.slim
@@ -1,7 +1,74 @@
-h1 Search results: #{@results&.count || 0}
+h1 Site search
 
-- if @results.present?
-  - @results.each do |result|
-    = render "search_result", result: result
-- else
-  'No results
+= form_with url: search_index_path, method: :get do |f|
+  .input-group.mb-3
+    = f.text_field :query, { value: @query, class: 'form-control', placeholder: 'Type query', 'aria-label' => 'Type query', 'aria-describedby' => "btn-search" }
+    = f.submit 'Search', class: 'btn btn-outline-primary', id: 'btn-search'
+
+  .resources-for-search.mb-3.mt-3
+    legend
+      'Select resources to search
+    .form-check
+      = f.text_field :search_questions,
+        type: 'checkbox',
+        value: "1",
+        id: 'search_questions_chechbox',
+        class: 'form-check-input',
+        checked: search_chechbox_checked?(@search_params, :search_questions)
+
+      = f.label :search_questions_chechbox, 'Questions', class: 'form-check-label'
+
+    .form-check
+      = f.text_field :search_answers,
+        type: 'checkbox',
+        value: "1",
+        id: 'search_answers_chechbox',
+        class: 'form-check-input',
+        checked: search_chechbox_checked?(@search_params, :search_answers)
+      = f.label :search_answers_chechbox, 'Answers', class: 'form-check-label'
+
+    .form-check
+      = f.text_field :search_users,
+        type: 'checkbox',
+        value: "1",
+        id: 'search_users_chechbox',
+        class: 'form-check-input',
+        checked: search_chechbox_checked?(@search_params, :search_users)
+
+      = f.label :search_users_chechbox, 'Users', class: 'form-check-label'
+
+    .form-check
+      = f.text_field :search_comments,
+        type: 'checkbox',
+        value: "1",
+        id: 'search_comments_chechbox',
+        class: 'form-check-input',
+        checked: search_chechbox_checked?(@search_params, :search_comments)
+
+      = f.label :search_comments_chechbox, 'Comments', class: 'form-check-label'
+
+  .fuzziness.mb-5.mt-3
+    .form-check.form-switch
+      = f.text_field :fuzziness,
+        type: 'checkbox',
+        value: "1",
+        id: 'fuzziness_chechbox',
+        role: 'switch',
+        class: 'form-check-input',
+        checked: search_chechbox_checked?(@search_params, :fuzziness)
+
+      = f.label :fuzziness, 'Enable fuzziness?', class: 'form-check-label'
+
+- if @query.length.positive?
+  h2 Search results for '#{@query}'
+  h3 Total (limit #{@result_limit}): #{@results_count}
+
+  .searh-results
+    - if @results.present?
+      - @results.each do |result|
+        = render "#{result._index}", result: result
+    - else
+      'No results
+
+  =paginate @results
+
