--- a/app/views/shared/_header.html.slim
+++ b/app/views/shared/_header.html.slim
@@ -8,3 +8,6 @@ nav.navbar.header.bg-light
       div
         = link_to "Sign in", new_user_session_path, id: 'sign_in', class: 'btn btn-outline-primary me-2'
         = link_to "Sign up", new_user_registration_path, id: 'sign_up', class: 'btn btn-outline-primary'
+
+    div
+      = link_to "Site search", search_index_path, class: 'btn btn-outline-warning'
