--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,14 @@
 
 @import "bootstrap/scss/bootstrap";
 
+@import 'bootstrap-icons/font/bootstrap-icons.css';
+
+@font-face {
+  font-family: "bootstrap-icons";
+  src: font-url("bootstrap-icons/font/fonts/bootstrap-icons.woff2") format("woff2"),
+    font-url("bootstrap-icons/font/fonts/bootstrap-icons.woff") format("woff");
+}
+
 @import "./alerts.scss";
 @import "./errors.scss";
 @import "./layout.scss";
