--- a/app/views/questions/index.html.slim
+++ b/app/views/questions/index.html.slim
@@ -1,6 +1,7 @@
-h1 A list of questions
+- cache collection_cache_key_for(:question) do
+  h1 A list of questions
 
-ul.questions.mb-5
-  = render @questions
+  ul.questions.mb-5
+    = render @questions
 
-= link_to 'Ask question', new_question_path, class: 'btn btn-primary'
+  = link_to 'Ask question', new_question_path, class: 'btn btn-primary'
