--- a/app/views/questions/show.html.slim
+++ b/app/views/questions/show.html.slim
@@ -1,81 +1,82 @@
-h1 Question
+- cache @question do
+  h1 Question
 
-div.question.mb-5
-  = render 'shared/vote', voteable: @question
+  div.question.mb-5
+    = render 'shared/vote', voteable: @question
 
-  div.mb-3
-    div.fw-bold Title
-    = @question.title
-
-  div.mb-3
-    div.fw-bold Body
-    = @question.body
-
-  div.mb-3
-    div.fw-bold Files:
-    = render "shared/file_list", resource: @question, is_uploaded_files: false
-
-  - if @question.links.present?
     div.mb-3
-      = render "shared/links", links: @question.links, with_matching: true
+      div.fw-bold Title
+      = @question.title
 
-  - if @question.reward.present?
-    div.reward.mb-3
-      div.fw-bold.mb-1
-        'Best answer reward
-      div= @question.reward.title
-      = image_tag url_for(@question.reward.image), class: "best-answer-reward"
+    div.mb-3
+      div.fw-bold Body
+      = @question.body
 
-  - if can?(:create, @user_subscription_change_question)
-    = button_to 'Watch for update question', users_subscriptions_path(question_id: @question.id, subscription_slug: "change_question"), method: :post, remote: true, class: 'btn btn-success mb-3'
-  - elsif can?(:destroy, @user_subscription_change_question)
-    = button_to 'Unwatch for update question', users_subscriptions_path(@user_subscription_change_question), method: :delete, remote: true, class: 'btn btn-danger mb-3'
+    div.mb-3
+      div.fw-bold Files:
+      = render "shared/file_list", resource: @question, is_uploaded_files: false
 
-  = render 'shared/comments', resource: @question
-
-div.mb-5
-  div.mb-2.fw-bold Answers
-
-  - if can?(:create, @user_subscription_new_answer)
-    = button_to 'Watch for new answers', users_subscriptions_path(question_id: @question.id, subscription_slug: "new_answer"), method: :post, remote: true, class: 'btn btn-success mb-3'
-  - elsif can?(:destroy, @user_subscription_new_answer)
-    = button_to 'Unwatch for new answers', users_subscriptions_path(@user_subscription_new_answer), method: :delete, remote: true, class: 'btn btn-danger mb-3'
-
-  ul.answers.mb-3
-    - if @answers.present?
-      = render @answers
-    - else
-      span.no-answers
-        'No answers
-
-- if can?(:create, Answer)
-  div
-    = form_with model: [@question, @answer], html: { id: "new-answer-form" }, local: false, class: 'create-answer-form' do |f|
-      div.answer-errors
-        = render 'shared/errors', resource: @answer
-
-      div.answer-new.mb-3
-        = f.label :body, 'You can answer the question here', class: 'form-label'
-        = f.text_area :body, id: :answer_body, rows: 10, class: 'form-control create-answer-area'
-
+    - if @question.links.present?
       div.mb-3
-        label for="answer_files"
-          = content_tag "a", "+ Add files", class: "btn btn-primary text-light", role: 'button'
+        = render "shared/links", links: @question.links, with_matching: true
 
-        = f.file_field :files, id: "answer_files", class: 'form-control form-control-sm answer_files d-none', multiple: true, direct_upload: true
+    - if @question.reward.present?
+      div.reward.mb-3
+        div.fw-bold.mb-1
+          'Best answer reward
+        div= @question.reward.title
+        = image_tag url_for(@question.reward.image), class: "best-answer-reward"
 
-        p id="files-area"
-            span id="filesList"
-              span id="files-names"
+    - if can?(:create, @user_subscription_change_question)
+      = button_to 'Watch for update question', users_subscriptions_path(question_id: @question.id, subscription_slug: "change_question"), method: :post, remote: true, class: 'btn btn-success mb-3'
+    - elsif can?(:destroy, @user_subscription_change_question)
+      = button_to 'Unwatch for update question', users_subscriptions_path(@user_subscription_change_question), method: :delete, remote: true, class: 'btn btn-danger mb-3'
 
-      div.mb-2
-        div.mb-1 Links
-        #links.mb-5
-          = f.fields_for :links do |link|
-            = render 'link_fields', f: link
-          .links
-            = link_to_add_association '+ Add link', f, :links, class: 'btn btn-primary'
+    = render 'shared/comments', resource: @question
 
-      = f.submit 'Answer', class: 'btn btn-primary me-2'
+  div.mb-5
+    div.mb-2.fw-bold Answers
 
-= link_to 'Back to questions', questions_path, class: 'btn btn-outline-secondary'
+    - if can?(:create, @user_subscription_new_answer)
+      = button_to 'Watch for new answers', users_subscriptions_path(question_id: @question.id, subscription_slug: "new_answer"), method: :post, remote: true, class: 'btn btn-success mb-3'
+    - elsif can?(:destroy, @user_subscription_new_answer)
+      = button_to 'Unwatch for new answers', users_subscriptions_path(@user_subscription_new_answer), method: :delete, remote: true, class: 'btn btn-danger mb-3'
+
+    ul.answers.mb-3
+      - if @answers.present?
+        = render @answers
+      - else
+        span.no-answers
+          'No answers
+
+  - if can?(:create, Answer)
+    div
+      = form_with model: [@question, @answer], html: { id: "new-answer-form" }, local: false, class: 'create-answer-form' do |f|
+        div.answer-errors
+          = render 'shared/errors', resource: @answer
+
+        div.answer-new.mb-3
+          = f.label :body, 'You can answer the question here', class: 'form-label'
+          = f.text_area :body, id: :answer_body, rows: 10, class: 'form-control create-answer-area'
+
+        div.mb-3
+          label for="answer_files"
+            = content_tag "a", "+ Add files", class: "btn btn-primary text-light", role: 'button'
+
+          = f.file_field :files, id: "answer_files", class: 'form-control form-control-sm answer_files d-none', multiple: true, direct_upload: true
+
+          p id="files-area"
+              span id="filesList"
+                span id="files-names"
+
+        div.mb-2
+          div.mb-1 Links
+          #links.mb-5
+            = f.fields_for :links do |link|
+              = render 'link_fields', f: link
+            .links
+              = link_to_add_association '+ Add link', f, :links, class: 'btn btn-primary'
+
+        = f.submit 'Answer', class: 'btn btn-primary me-2'
+
+  = link_to 'Back to questions', questions_path, class: 'btn btn-outline-secondary'
