--- a/app/views/shared/_comments.html.slim
+++ b/app/views/shared/_comments.html.slim
@@ -2,22 +2,24 @@
   .fw-bold Comments:
   - if resource.comments.present?
     - resource.comments.each do |c|
-      .comment id="comment_#{c.id}"
-        div.comment-author.mb-1
-          'Comment by #{c.author.email}
-        div.comment-body.mb-1
-          = c.body
-        div.comment-date
-          'Created: #{c.formatted_creation_date}
+      - cache c do
+        .comment id="comment_#{c.id}"
+          div.comment-author.mb-1
+            'Comment by #{c.author.email}
+          div.comment-body.mb-1
+            = c.body
+          div.comment-date
+            'Created: #{c.formatted_creation_date}
   - else
     'No comments
 
-- if can?(:add_comment, resource)
-  = form_with url: "#{polymorphic_url(resource)}/add_comment", method: :patch, local: false, class: "add_comment" do |f|
-    div.comment-errors
+- cache ['add_comment_form', resource] do
+  - if can?(:add_comment, resource)
+    = form_with url: "#{polymorphic_url(resource)}/add_comment", method: :patch, local: false, class: "add_comment" do |f|
+      div.comment-errors
 
-    div.mb-3
-      = f.label :body, 'Type your comment', class: 'form-label'
-      = f.text_area :body, rows: 10, class: 'form-control comment-body'
+      div.mb-3
+        = f.label :body, 'Type your comment', class: 'form-label'
+        = f.text_area :body, rows: 10, class: 'form-control comment-body'
 
-    = f.submit 'Comment', class: 'btn btn-primary'
+      = f.submit 'Comment', class: 'btn btn-primary'
